# Basira

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  backup.sh  basira.service  deploy.sh  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENTS.md  API_REFERENCE.md  ARCHITECTURE.md  BRANCHING_STRATEGY.md  DATA_SOURCES.md  DEPLOYMENT.md  N8N_WORKFLOWS.md  OVERVIEW.md  PILOT_GUIDE.md  TRAINING.md  USER_GUIDE.md
docs/plan/: PRD.md  impl_plan.md  repo_plan.md
src/agents/: __init__.py  builder.py  graph.py  llm.py  state.py
src/agents/nodes/: analytical.py  cx.py  general.py  internal_ops.py  pricing.py  supervisor.py  supply_chain.py
src/agents/prompts/: __init__.py  analytical_prompt.txt  cx_prompt.txt  general_prompt.txt  internal_ops_prompt.txt  pricing_prompt.txt  supervisor_prompt.txt  supply_chain_prompt.txt
src/agents/tools/: __init__.py  analytics_tools.py  cx_tools.py  ops_tools.py  pricing_tools.py  supply_chain_tools.py
src/api/: dependencies.py  main.py
src/api/middleware/: __init__.py  auth.py  guardrails.py  rate_limit.py  rbac.py
src/api/routes/: analytics.py  chat.py  export.py  (+6 more)
src/automation/: __init__.py
src/config/: __init__.py  settings.py
src/dashboard/: __init__.py  app.py  launch.py
src/domain/: __init__.py
src/infrastructure/: __init__.py
src/pilot/: __init__.py  config.py  monitor.py
tests/: __init__.py
tests/e2e/: test_api_e2e.py
tests/integration/: test_api.py
tests/unit/: test_agents.py  test_cache.py  test_collaboration.py  test_config.py  test_embeddings.py  test_escalation.py  test_export.py  test_guardrails.py  test_memory.py  test_metrics.py  test_models.py  test_phase2.py  test_pos_connector.py  test_ratelimit.py  test_services.py  test_sprint4.py  test_state.py  test_vectorstore.py  test_voice.py  test_webhooks.py
(+92 files in other folders)
