[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basira"
version = "0.1.0"
description = "Basira — Multi-Agent AI Platform for Retail & Food (Arabic-first)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Company AI Team" }]

dependencies = [
    # Web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # LangGraph / LangChain
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "openai>=1.50.0",

    # Vector store
    "qdrant-client>=1.7.0",

    # HTTP client (Odoo, n8n)
    "httpx>=0.25.0",

    # Document processing
    "python-multipart>=0.0.6",
    "pypdf>=3.17.0",
    "openpyxl>=3.1.0",

    # Session & Cache
    "redis>=5.0.0",

    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "tenacity>=8.2.0",

    # Observability
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "black>=23.11.0",
    "httpx>=0.25.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S101", "S603", "S607"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring external services",
]
